[XForms] Setting a type on instance data makes rebuild() throw exception. Bug 310138, r=aaronr+smaug